# cook-inventory

./: .env.exemple  .gitignore  Dockerfile  Makefile  pyproject.toml
src/: config.py  db.py  main.py  services.py  utils.py
src/app/: __init__.py
src/app/auth/: __init__.py  auth_controller.py
src/app/auth/views/: login.html
src/app/category/: category_controller.py  category_model.py
src/app/category/views/: category.create.html  category.index.html  category.update.html
src/app/food/: food_controller.py
src/app/inventory/: inventory_controller.py  inventory_model.py
src/app/inventory/enums/: measure.py
src/app/inventory/views/: inventory.create.html  inventory.detail.html  inventory.index.html
src/app/user/: user_model.py
src/migrations/versions/: 1051e5011026_v4__image_column_created.py  2dd80a36b58f_v3__category_and_inventory_tables_.py  86ff656acb3b_v1__users_table_created.py  b12f0ea206af_v2__category_and_inventory_tables_.py
src/static/css/: template.css
src/templates/: index.html  layout.html  macros.html
